# desktop-config

./: .gitignore  ansible.cfg  desktop-config.cabal  install.sh  load.yml  requirments.yml  site-domovoy.yml  site-mnv.yml  site.yml
inventory/: hosts
inventory/group_vars/: reiji  root  sgf
roles/sgf-apt/defaults/: main.yml
roles/sgf-apt/handlers/: main.yml
roles/sgf-apt/tasks/: main.yml
roles/sgf-apt/tests/: test.yml
roles/sgf-apt/vars/: main.yml
roles/sgf-console/defaults/: main.yml
roles/sgf-console/files/: bash_completion  bashrc  tmux.conf
roles/sgf-console/handlers/: main.yml
roles/sgf-console/meta/: main.yml
roles/sgf-console/tasks/: load.yml  load_pre.yml  main.yml  shell.yml  tmux.yml  vim.yml
roles/sgf-console/templates/: bash_logout  bashrc  gitconfig  gpg-agent.conf  tmux-common.conf
roles/sgf-console/vars/: main.yml
roles/sgf-desktop/defaults/: main.yml
roles/sgf-desktop/files/: xinputrc
roles/sgf-desktop/handlers/: main.yml
roles/sgf-desktop/meta/: main.yml
roles/sgf-desktop/tasks/: anki.yml  firefox.yml  firefox_versions.yml  gui.yml  im.yml  load.yml  load_pre.yml  main.yml  xkb.yml  xmonad.yml
roles/sgf-desktop/templates/: xinputrc  xkb.sh
roles/sgf-desktop/tests/: test.yml
roles/sgf-desktop/vars/: Debian-10.yml  Debian-9.yml  empty.yml  main.yml
roles/sgf-system/defaults/: main.yml
roles/sgf-system/files/: rpz.db
roles/sgf-system/handlers/: main.yml
roles/sgf-system/meta/: main.yml
roles/sgf-system/tasks/: apparmor.yml  grml.yml  grub.yml  interfaces.yml  main.yml  (+1 more)
src/: Install.hs  pluma-rus.desktop
(+40 files in other folders)
