name:                desktop-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgf-dma/desktop-config#readme
license:             BSD3
license-file:        LICENSE
author:              sgf
maintainer:          sgf.dma@gmail.com
copyright:           2017 sgf
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Sgf.Desktop.Install
  ghc-options:          -Wall -rtsopts -with-rtsopts=-I0
  build-depends:        base >= 4.7 && < 5
                        , extra
                        , shake
  default-language:    Haskell2010

executable install
  hs-source-dirs:       src
  main-is:              Install.hs
  other-modules:        Sgf.Desktop.Install
  ghc-options:          -Wall -rtsopts -with-rtsopts=-I0
  build-depends:        base
                        , extra
                        , shake
  default-language:     Haskell2010

--test-suite desktop-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , desktop
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgf-dma/desktop-config
